@@ -1,44 +1,48 @@
 # 0 = off, 1 = error, 2 = warning, 3 = info, 4 = debug
 loglevel = 4
 
-# screen {
-   width = 640
-   height = 480
-   bitdepth = 32
-   fullscreen = false
-# }
+## Screen options
+width = 640
+height = 480
+bitdepth = 32
+fullscreen = false
 
-# ui {
-   font = "slicker.ttf"
-   title_height = 40  # height of title font
-   list_height  = 30  # height of list entry font
-   pagesize = 15      # number of list items to skip in pageup/down
-# }
+## Mame options
+path = "/Users/josh/sdlmame0118-intel-nodebug/mamepm"
+params = "-rompath /Users/josh/sdlmame0118-intel-nodebug/roms\
+          -snapshot_directory /Users/josh/sdlmame0118-intel-nodebug/snap"
+snaps = "/Users/josh/sdlmame0118-intel-nodebug/snap"
 
-# mame {
-   path = "/Users/josh/sdlmame0118-intel-nodebug/mamepm"
-   params = "-rompath /Users/josh/sdlmame0118-intel-nodebug/roms -snapshot_directory /Users/josh/sdlmame0118-intel-nodebug/snap"
-   snaps = "/Users/josh/sdlmame0118-intel-nodebug/snap"
-   rompath = ""
-# }
+## Ui options
+font = "slicker.ttf"
+title_height = 40 # height of title font
+title_color  = 0xefefef
+list_height  = 28 # height of list entry font
+menu_color = 0xc2f4ff
+menu_hover_color = 0x32E4ff
+game_color = 0xefefef
+game_hover_color = 0xffe432
+snapshot_alpha = 0xc8 # amount to fade game snapshots (0x00 - 0xff)
+# delay in miliseconds before displaying game snapshot
+snapshot_delay = 500
+page_size = 15 # number of list items to skip in pageup/down
 
-# keys {
-   exit = 27
-   snap = 49
-   reload = 50
-   showhide = 51
+## Key mapping
+exit = 27
+snap = 49
+reload = 50
+showhide = 51
 
-   p1up = 273
-   p1down = 274
-   p1pgup = 275
-   p1pgdown = 276
-   p1button1 = 306
-   p1button2 = 304
+p1up = 273
+p1down = 274
+p1pgup = 275
+p1pgdown = 276
+p1button1 = 306
+p1button2 = 304
 
-   p2up = 114
-   p2down = 102
-   p2pgup = 100
-   p2pgdown = 103
-   p2button1 = 97
-   p2button2 = 119
-# }
+p2up = 114
+p2down = 102
+p2pgup = 100
+p2pgdown = 103
+p2button1 = 97
+p2button2 = 119
