@@ -30,72 +30,29 @@ using namespace std;
 
 options::options(const char* conf_dir) : _conf_dir(conf_dir)
 {
-   /*
-   cfg_opt_t screen_opts[] = {
-      CFG_INT(KEY_SCREEN_WIDTH, 0, CFGF_NODEFAULT),
-      CFG_INT(KEY_SCREEN_HEIGHT, 0, CFGF_NODEFAULT),
-      CFG_INT(KEY_SCREEN_BPP, 0, CFGF_NODEFAULT),
-      CFG_BOOL(KEY_FULLSCREEN, cfg_false, CFGF_NONE),
-      CFG_STR(KEY_FONT_FILE, 0, CFGF_NODEFAULT),
-      CFG_INT(KEY_TITLE_HEIGHT, 40, CFGF_NONE),
-      CFG_INT(KEY_LIST_HEIGHT, 30, CFGF_NONE),
-      CFG_INT(KEY_PAGE_SIZE, 15, CFGF_NONE),
-      CFG_END()
-   };
-   
-   cfg_opt_t mame_opts[] = {
-      CFG_STR(KEY_MAME_PATH, 0, CFGF_NODEFAULT),
-      CFG_STR(KEY_MAME_PARAMS, "", CFGF_NONE),
-      CFG_STR(KEY_MAME_SNAPS_PATH, "", CFGF_NONE),
-      CFG_STR(KEY_MAME_ROM_PATH, "", CFGF_NONE),
-      CFG_END()
-   };
-   
-   cfg_opt_t keys_opts[] = {
-      CFG_INT(KEY_KEYCODE_EXIT, 27, CFGF_NONE),
-      CFG_INT(KEY_KEYCODE_SNAP, 49, CFGF_NONE),
-      CFG_INT(KEY_KEYCODE_RELOAD, 50, CFGF_NONE),
-      CFG_INT(KEY_KEYCODE_TOGGLE, 51, CFGF_NONE),
-      CFG_INT(KEY_KEYCODE_P1_UP, 273, CFGF_NONE),
-      CFG_INT(KEY_KEYCODE_P1_DOWN, 274, CFGF_NONE),
-      CFG_INT(KEY_KEYCODE_P1_PGUP, 275, CFGF_NONE),
-      CFG_INT(KEY_KEYCODE_P1_PGDOWN, 276, CFGF_NONE),
-      CFG_INT(KEY_KEYCODE_P1_BTN1, 306, CFGF_NONE),
-      CFG_INT(KEY_KEYCODE_P1_BTN2, 306, CFGF_NONE),
-      CFG_INT(KEY_KEYCODE_P2_UP, 114, CFGF_NONE),
-      CFG_INT(KEY_KEYCODE_P2_DOWN, 102, CFGF_NONE),
-      CFG_INT(KEY_KEYCODE_P2_PGUP, 100, CFGF_NONE),
-      CFG_INT(KEY_KEYCODE_P2_PGDOWN, 103, CFGF_NONE),
-      CFG_INT(KEY_KEYCODE_P2_BTN1, 97, CFGF_NONE),
-      CFG_INT(KEY_KEYCODE_P2_BTN2, 119, CFGF_NONE),
-      CFG_END()
-   };
-   
    cfg_opt_t opts[] = {
-      CFG_INT(KEY_LOGLEVEL, 0, CFGF_NONE),
-      CFG_SEC("screen", screen_opts, CFGF_NONE),
-      CFG_SEC("mame", mame_opts, CFGF_NONE),
-      CFG_SEC("keys", keys_opts, CFGF_NONE),
-      CFG_END()
-   };
-   */
-   
-   cfg_opt_t opts[] = {
-      CFG_INT(KEY_LOGLEVEL, 0, CFGF_NONE),
+      CFG_INT(KEY_LOGLEVEL, 2, CFGF_NONE),
       
       CFG_INT(KEY_SCREEN_WIDTH, 0, CFGF_NODEFAULT),
       CFG_INT(KEY_SCREEN_HEIGHT, 0, CFGF_NODEFAULT),
       CFG_INT(KEY_SCREEN_BPP, 0, CFGF_NODEFAULT),
       CFG_BOOL(KEY_FULLSCREEN, cfg_false, CFGF_NONE),
+      
       CFG_STR(KEY_FONT_FILE, 0, CFGF_NODEFAULT),
       CFG_INT(KEY_TITLE_HEIGHT, 40, CFGF_NONE),
+      CFG_INT(KEY_TITLE_COLOR, 0xefefef, CFGF_NONE),
       CFG_INT(KEY_LIST_HEIGHT, 30, CFGF_NONE),
+      CFG_INT(KEY_MENU_COLOR, 0xc2f4ff, CFGF_NONE),
+      CFG_INT(KEY_MENU_HOVER_COLOR, 0x32E4ff, CFGF_NONE),
+      CFG_INT(KEY_GAME_COLOR, 0xefefef, CFGF_NONE),
+      CFG_INT(KEY_GAME_HOVER_COLOR, 0xffe432, CFGF_NONE),
+      CFG_INT(KEY_SNAPSHOT_ALPHA, 0xc8, CFGF_NONE),
+      CFG_INT(KEY_SNAPSHOT_DELAY, 500, CFGF_NONE),
       CFG_INT(KEY_PAGE_SIZE, 15, CFGF_NONE),
       
       CFG_STR(KEY_MAME_PATH, 0, CFGF_NODEFAULT),
       CFG_STR(KEY_MAME_PARAMS, "", CFGF_NONE),
       CFG_STR(KEY_MAME_SNAPS_PATH, "", CFGF_NONE),
-      CFG_STR(KEY_MAME_ROM_PATH, "", CFGF_NONE),
       
       CFG_INT(KEY_KEYCODE_EXIT, 27, CFGF_NONE),
       CFG_INT(KEY_KEYCODE_SNAP, 49, CFGF_NONE),
@@ -120,13 +77,13 @@ options::options(const char* conf_dir) : _conf_dir(conf_dir)
    path.append("/lemonlauncher.conf");
    
    _cfg = cfg_init(opts, CFGF_NONE);
-   int ret = cfg_parse(_cfg, path.c_str());
+   int result = cfg_parse(_cfg, path.c_str());
    
-   if (ret == CFG_FILE_ERROR) {
+   if (result == CFG_FILE_ERROR) {
       perror(path.c_str());
-      throw bad_lemon("file error");
-   } else if (ret == CFG_PARSE_ERROR) {
-      throw bad_lemon("parse error");
+      throw bad_lemon("options: file error");
+   } else if (result == CFG_PARSE_ERROR) {
+      throw bad_lemon("options: parse error");
    }
 }
 
